2007-08-16  Paolo Maggi  <paolo@gnome.org>

	* MAINTAINERS: Follow new format regulations.
	
=== gedit 2.19.90 ===

2007-08-15  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.19.90 released

2007-08-15  Paolo Borelli  <pborelli@katamail.com>

	* plugins/spell/gedit-spell-plugin.c:
	* plugins/spell/gedit-spell-language-dialog.[ch]:
	* plugins/spell/gedit-spell-checker-dialog.c:

	Turn the language dialog into a GtkDialog suubclass and 
	make use of gedit_utils_get_glade_widgets instead of using
	glade directly.

2007-08-15  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-commands-file.c: add comment for translators.

2007-08-15  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-window.c: remove use of deprecated
	gtk_recent_manager_get_for_screen.

2007-08-15  Paolo Borelli  <pborelli@katamail.com>

	* gedit/dialogs/gedit-page-setup-dialog.glade:
	* gedit/dialogs/gedit-preferences-dialog.glade:

	Fix a couple of accelerators, patch by Patrick Wade, fixes 
	bug #466688 and #466689.

2007-08-15  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document-loader.c: fix bugus assertion.

2007-08-15  Paolo Maggi  <paolo@gnome.org>

	* gedit/dialogs/gedit-preferences-dialog.c: allow to add/remove style
	schemes

	* gedit/dialogs/gedit-preferences-dialog.glade: ditto

	* gedit/gedit-document.c (get_default_style_scheme): new function
	(gedit_document_init): use get_default_style_scheme instead of the 
	removed gedit_source_style_manager_get_default_scheme

	* gedit/gedit-prefs-manager-app.c
	(gedit_prefs_manager_source_style_scheme_changed): do not use 
	the removed function gedit_source_style_manager_get_default_scheme

	* gedit/gedit-source-style-manager.[ch]: mostly rewritten

2007-08-15  Paolo Maggi  <paolo@gnome.org>

	* docs/reference/Makefile.am: fix building
	* docs/reference/gedit.types: ditto

	* gedit/dialogs/Makefile.am: do not compile and distributed files 
	related	to the style scheme editor.
