@@ -1,5 +1,12 @@
 2007-08-16  Paolo Maggi  <paolo@gnome.org>
 
+	* gedit/gedit-window.c (language_toggled),
+	(create_language_menu_item), (create_languages_menu),
+	(update_languages_menu): use language id instead of language name
+	as action name in the languages menu. Fixes bug #462597.
+
+2007-08-16  Paolo Maggi  <paolo@gnome.org>
+
 	* MAINTAINERS: Follow new format regulations.
 	
 === gedit 2.19.90 ===
